<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EDX</string>
    <string name="title_section1">我的课程</string>
    <string name="title_section2">课程浏览</string>
    <string name="title_section3">应用设置</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="empty_email">邮箱为空</string>
    <string name="activity_login_email_hint">请输入邮箱</string>
    <string name="error_email">邮箱格式错误</string>
    <string name="activity_login_passwd_hint">请输入密码</string>
    <string name="activity_login_btn">登录</string>
    <string name="empty_passwd">密码为空</string>
    <string name="error_passwd">密码错误</string>
    <string name="login_failure">登录失败</string>
    <string name="no_network">无网络连接</string>

    <string-array name="drawer">
        <item>我的课程</item>
        <item>课程浏览</item>
        <item>应用设置</item>
        <item>意见反馈</item>
        <item>打赏我们</item>
        <item>退出账号</item>
    </string-array>

</resources>
